--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>OvO Unblocked</title>
 </head>
 <body>
-
+    <iframe src="https://game.stickmanhook.app/ovo/"  width="100%" height="100%" scrolling="no" frameborder="0"></iframe>
 </body>
 </html>
