--- a/index.html
+++ b/index.html
@@ -6,8 +6,48 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>OvO Unblocked</title>
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+
+        .container {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1;
+        }
+
+        .bottom-text {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            padding: 10px 0;
+            font-family: Arial, sans-serif;
+            font-size: 14px;
+            z-index: 2;
+        }
+    </style>
 </head>
 <body>
-    <iframe src="https://game.stickmanhook.app/ovo/"  width="100%" height="100%" scrolling="no" frameborder="0"></iframe>
+<div class="container">
+    <iframe src="https://game.stickmanhook.app/ovo/" scrolling="no"></iframe>
+    <div class="bottom-text">Powered by YourWebsite - Enjoy the game!</div>
+</div>
 </body>
 </html>
