--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
 <div class="container">
-    <iframe src="https://game.stickmanhook.app/ovo/" scrolling="no"></iframe>
+    <iframe src="https://html5.gamedistribution.com/1377b99c10284c229423118a941af3b1/?gd_sdk_referrer_url=https://gamedistribution.com/games/ovo/" scrolling="no"></iframe>
     <div class="bottom-text">
         <p>
             <a href="https://ovo-unblocked76-games.github.io/">OvO unblocked</a> is a fast-paced platformer game that combines precise movement with challenging levels, where you navigate through
