--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         iframe {
             width: 100%;
-            height: 100%;
+            height: 90%;
             border: none;
             position: absolute;
             top: 0;
@@ -54,6 +54,29 @@
             text-decoration: none;
             color: #e94875;
         }
+
+        @media screen and (max-width: 768px) {
+            .bottom-text p {
+                margin: 0 auto;
+                padding: 15px 10px;
+                color: #ffffff;
+                text-align: center;
+                font-size: 13px;
+                line-height: 18px;
+            }
+        }
+
+        @media screen and (max-width: 480px) {
+            .bottom-text p {
+                margin: 0 auto;
+                padding: 10px 5px;
+                color: #ffffff;
+                text-align: center;
+                font-size: 12px;
+                line-height: 16px;
+            }
+        }
+
     </style>
 </head>
 <body>
