--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>OvO Unblocked</title>
-    <link rel="icon" type="image/x-icon" href="OvO unblocked-.jpeg">
+    <title>Tomb of the Mask Unblocked</title>
+    <link rel="icon" type="image/x-icon" href="Tomb of the Mask Unblocked-512x512.jpeg">
     <style>
         html, body {
             height: 100%;
@@ -81,13 +81,10 @@
 </head>
 <body>
 <div class="container">
-    <iframe src="https://html5.gamedistribution.com/1377b99c10284c229423118a941af3b1/?gd_sdk_referrer_url=https://gamedistribution.com/games/ovo/" scrolling="no"></iframe>
+    <iframe src="https://html5.gamedistribution.com/464ab6c1f23c432d88c5d9e3bb785bbe/?gd_sdk_referrer_url=https://gamedistribution.com/games/tomb-of-the-mask-online/" scrolling="no"></iframe>
     <div class="bottom-text">
         <p>
-            <a href="https://ovo-unblocked76-games.github.io/">OvO unblocked</a> is a fast-paced platformer game that combines precise movement with challenging levels, where you navigate through
-            increasingly complex stages filled with obstacles and hazards. Your goal: reach the flag at the end of each level as quickly as
-            possible, while collecting as many coins as you can. To play OvO unblocked game, move with the left/right arrows,
-            jump with the up arrow, and slide by pressing the down arrow while running. For a smash move, press the down arrow in mid-air.
+            <a href="https://tombofthemask-unblocked.github.io/">Tomb of the Mask Unblocked</a> Text description.
         </p>
     </div>
 </div>
