--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             height: 100%;
         }
 
-        iframe {
+        embed {
             width: 100%;
             height: 90%;
             border: none;
@@ -81,7 +81,7 @@
 </head>
 <body>
 <div class="container">
-    <iframe src="https://html5.gamedistribution.com/1377b99c10284c229423118a941af3b1/?gd_sdk_referrer_url=https://gamedistribution.com/games/ovo/" scrolling="no"></iframe>
+    <embed src="https://html5.gamedistribution.com/1377b99c10284c229423118a941af3b1/?gd_sdk_referrer_url=https://gamedistribution.com/games/ovo/" scrolling="no"></embed>
     <div class="bottom-text">
         <p>
             <a href="https://ovo-unblocked76-games.github.io/">OvO unblocked</a> is a fast-paced platformer game that combines precise movement with challenging levels, where you navigate through
