--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
     </style>
 </head>
 <body>
+    
 <div class="container">
+    <img src="./ovo-unblocked-game-logo.webp" alt="tunnel rush" class="img-fluid" width="900px" height="150px" id="logo">
     <embed src="https://html5.gamedistribution.com/1377b99c10284c229423118a941af3b1/?gd_sdk_referrer_url=https://gamedistribution.com/games/ovo/" scrolling="no"></embed>
 </div>
 </body>
