--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
                 line-height: 16px;
             }
         }
-
+img { 
+    align-items:center;
+    margin-right:50%;
+    margin-left:50%;
+}
     </style>
 </head>
 <body>
