--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@ img {
     margin-right:50%;
     margin-left:50%;
 }
+h1 { 
+    align-items:center;
+    margin-right:50%;
+    margin-left:50%;
+}
     </style>
 </head>
 <body>
@@ -88,6 +93,7 @@ img {
 <div class="container">
     <img src="./ovo-unblocked-game-logo.webp" alt="tunnel rush" class="img-fluid" width="900px" height="150px" id="logo">
     <embed src="https://html5.gamedistribution.com/1377b99c10284c229423118a941af3b1/?gd_sdk_referrer_url=https://gamedistribution.com/games/ovo/" scrolling="no"></embed>
+    <h1>loading...</h1>
 </div>
 </body>
 </html>
