--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
         }
 img { 
     align-items:center;
+    position:fixed;
 }
 h1 { 
     align-items:center;
-    margin-right:50%;
-    margin-left:50%;
+    position:fixed;
 }
     </style>
 </head>
