--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ h1 {
     
 <div class="container">
     <img src="./ovo-unblocked-game-logo.webp" alt="tunnel rush" class="img-fluid" width="900px" height="150px" id="logo">
-    <embed src="https://gamedistribution.com/games/ovo/" scrolling="no"></embed>
+    <embed src="https://dedragames.com" scrolling="no"></embed>
  
     <h1>loading...</h1>
 </div>
