--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ h1 {
 <body>
     
 <div class="container">
-    <img src="./ovo-unblocked-game-logo.webp" alt="tunnel rush" class="img-fluid" width="900px" height="150px" id="logo">
-    <embed src="https://dedragames.com" scrolling="no"></embed>
+    <img src="./ovo-unblocked-game-logo.webp" alt="OvO" class="img-fluid" width="900px" height="150px" id="logo">
+    <embed src="https://sl4ckrr.github.io./ovo/" scrolling="no"></embed>
  
     <h1>loading...</h1>
 </div>
