--- a/index.html
+++ b/index.html
@@ -1,100 +1,190 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>OvO Unblocked</title>
-    <link rel="icon" type="image/x-icon" href="OvO unblocked-.jpeg">
-    <style>
-        html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-        }
+<!DOCTYPE html>
+<html>
+  <head>
+    <script src="/js/all.js"></script>
 
-        .container {
-            position: relative;
-            width: 100%;
-            height: 100%;
-        }
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>OvO</title>
 
-        embed {
-            width: 100%;
-            height: 100%;
-            border: none;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 1;
-        }
+    <!-- Standardised web app manifest -->
+    <link rel="manifest" href="appmanifest.json" />
 
-        .bottom-text {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            background: rgba(0, 0, 0, 0.74);
-            font-family: Arial, sans-serif;
-            font-size: 14px;
-            z-index: 2;
-        }
+    <!-- Allow fullscreen mode on iOS devices. (These are Apple specific meta tags.) -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui"
+    />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <link rel="apple-touch-icon" sizes="256x256" href="icon-256.png" />
+    <meta name="HandheldFriendly" content="true" />
 
-        .bottom-text p {
-            margin: 0 auto;
-            padding: 20px 10px;
-            color: #ffffff;
-            text-align: center;
-            font-size: 16px;
-            line-height: 28px;
-        }
+    <!-- Chrome for Android web app tags -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="shortcut icon" sizes="256x256" href="icon-256.png" />
 
-        .bottom-text p a {
-            font-weight: 700;
-            text-decoration: none;
-            color: #e94875;
-        }
-
-        @media screen and (max-width: 768px) {
-            .bottom-text p {
-                margin: 0 auto;
-                padding: 15px 10px;
-                color: #ffffff;
-                text-align: center;
-                font-size: 13px;
-                line-height: 18px;
-            }
-        }
-
-        @media screen and (max-width: 480px) {
-            .bottom-text p {
-                margin: 0 auto;
-                padding: 10px 5px;
-                color: #ffffff;
-                text-align: center;
-                font-size: 12px;
-                line-height: 16px;
-            }
-        }
-img { 
-    margin-left:50vw;
-    align-items:center;
-    position:fixed;
-}
-h1 { 
-    margin-left:50vw;
-    align-items:center;
-    position:fixed;
-}
+    <!-- All margins and padding must be zero for the canvas to fill the screen. -->
+    <style type="text/css">
+      * {
+        padding: 0;
+        margin: 0;
+      }
+      html,
+      body {
+        background: #000;
+        color: #fff;
+        overflow: hidden;
+        touch-action: none;
+        -ms-touch-action: none;
+      }
+      canvas {
+        touch-action-delay: none;
+        touch-action: none;
+        -ms-touch-action: none;
+      }
     </style>
-</head>
-<body>
-    
-<div class="container">
-    <img src="./ovo-unblocked-game-logo.webp" alt="OvO" class="img-fluid" width="900px" height="150px" id="logo">
-    <embed src="https://sl4ckrr.github.io./ovo/" scrolling="no"></embed>
- 
-    <h1>loading...</h1>
-</div>
-</body>
+
+    <link href="animate.css" rel="stylesheet" type="text/css" />
+    <link href="hmmg_layoutTransition.css" rel="stylesheet" type="text/css" />
+    <link href="jquery.gritter.css" rel="stylesheet" type="text/css" />
+  
+          <style type="text/css">
+            .no-select {
+            -webkit-touch-callout: none; /* iOS Safari */
+            -webkit-user-select: none; /* Safari */
+            -khtml-user-select: none; /* Konqueror HTML */
+            -moz-user-select: none; /* Old versions of Firefox */
+            -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+            }
+          </style>
+        
+          <script type="text/javascript">
+            setTimeout(function(){
+              if(document.getElementsByTagName("canvas").length) {
+                document.getElementsByTagName("body")[0].classList.add("no-select")
+              }
+            }, 2000);
+          </script>
+        </head>
+
+  <body>
+    <div id="fb-root"></div>
+
+    <!-- The canvas must be inside a div called c2canvasdiv -->
+    <div id="c2canvasdiv" class="no-select">
+      <!-- The canvas the project will render to.  If you change its ID, don't forget to change the
+		ID the runtime looks for in the jQuery events above (ready() and cr_sizeCanvas()). -->
+      <canvas id="c2canvas" width="640" height="640">
+        <!-- This text is displayed if the visitor's browser does not support HTML5.
+			You can change it, but it is a good idea to link to a description of a browser
+			and provide some links to download some popular HTML5-compatible browsers. -->
+        <h1>
+          Your browser does not appear to support HTML5. Try upgrading your
+          browser to the latest version.
+          <a href="http://www.whatbrowser.org">What is a browser?</a>
+          <br /><br /><a
+            href="http://www.microsoft.com/windows/internet-explorer/default.aspx"
+            >Microsoft Internet Explorer</a
+          ><br />
+          <a href="http://www.mozilla.com/firefox/">Mozilla Firefox</a><br />
+          <a href="http://www.google.com/chrome/">Google Chrome</a><br />
+          <a href="http://www.apple.com/safari/download/">Apple Safari</a>
+        </h1>
+      </canvas>
+    </div>
+
+    <!-- Pages load faster with scripts at the bottom -->
+
+    <!-- Construct 2 exported games require jQuery. -->
+    <script src="jquery-3.4.1.min.js"></script>
+
+    <script src="GameAnalytics.js"></script>
+    <script src="Tween.js"></script>
+    <script src="html2canvas.min.js"></script>
+    <script src="jquery.gritter.js"></script>
+    <script src="howler.js"></script>
+
+    <!-- The runtime script.  You can rename it, but don't forget to rename the reference here as well.
+    This file will have been minified and obfuscated if you enabled "Minify script" during export. -->
+    <script src="c2runtime.js"></script>
+
+    <script>
+      // Start the Construct 2 project running on window load.
+      jQuery(document).ready(function () {
+        // Create new runtime using the c2canvas
+        cr_createRuntime("c2canvas");
+      });
+
+      // Pause and resume on page becoming visible/invisible
+      function onVisibilityChanged() {
+        if (
+          document.hidden ||
+          document.mozHidden ||
+          document.webkitHidden ||
+          document.msHidden
+        )
+          cr_setSuspended(true);
+        else cr_setSuspended(false);
+      }
+
+      document.addEventListener("visibilitychange", onVisibilityChanged, false);
+      document.addEventListener(
+        "mozvisibilitychange",
+        onVisibilityChanged,
+        false
+      );
+      document.addEventListener(
+        "webkitvisibilitychange",
+        onVisibilityChanged,
+        false
+      );
+      document.addEventListener(
+        "msvisibilitychange",
+        onVisibilityChanged,
+        false
+      );
+
+      function OnRegisterSWError(e) {
+        console.warn("Failed to register service worker: ", e);
+      }
+
+      // Runtime calls this global method when ready to start caching (i.e. after startup).
+      // This registers the service worker which caches resources for offline support.
+      window.C2_RegisterSW = function C2_RegisterSW() {
+        if (!navigator.serviceWorker) return; // no SW support, ignore call
+
+        try {
+          navigator.serviceWorker
+            .register("sw.js", { scope: "./" })
+            .then(function (reg) {
+              console.log("Registered service worker on " + reg.scope);
+            })
+            .catch(OnRegisterSWError);
+        } catch (e) {
+          OnRegisterSWError(e);
+        }
+      };
+    </script>
+  <script>function fnSendMsg(evt){
+          if(typeof window.parent.postMessage == 'function') {
+            window.parent.postMessage('keypress-from-game', '*');
+          } else if(typeof window.top.postMessage == 'function' && window.top != window.self) {
+            window.top.postMessage('keypress-from-game', '*');
+          }
+        }
+        document.body.addEventListener('click', function(event) {
+          fnSendMsg(event);
+        });
+        document.addEventListener('keypress', function(event) {
+        	 fnSendMsg(event);
+        });
+        document.addEventListener('keydown', function (e) {
+        	 fnSendMsg(event);
+        });
+        document.addEventListener('keyup', function (e) {
+        	  fnSendMsg(event);
+        });
+        </script></body>
 </html>
